<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray">
            </View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/teamA" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray">
            </View>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/teamB" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shots" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="goalForA"
                    android:text="@string/incrementShots" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="goalForB"
                    android:text="@string/incrementShots" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fouls" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="foulForA"
                    android:text="@string/incrementFouls" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="foulForB"
                    android:text="@string/incrementFouls" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/yellow" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="yellowForA"
                    android:text="@string/incrementYellow" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="yellowForB"
                    android:text="@string/incrementYellow" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/red" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="redForA"
                    android:text="@string/incrementRed" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/initialScore" />

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="redForB"
                    android:text="@string/incrementRed" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray">
        </View>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:onClick="reset"
            android:text="@string/reset" />
    </RelativeLayout>
</RelativeLayout>
